<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:padding="10dp">
    <!-- android:background="@drawable/white_btn_bg"-->
    <!--<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bottombg">-->

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">-->

    <com.fishbuddy.customfonts.CustomRegularTextView
        android:id="@+id/lakename_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/orange"
        android:text="@string/lakename"
        android:textSize="18sp"
        android:layout_marginLeft="10dp" />

    <com.fishbuddy.customfonts.CustomRegularTextView
        android:id="@+id/fishingspots_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/app_name"
        android:autoLink="web"
        android:textColor="@color/bluecolor"
        android:textSize="16sp"
        android:visibility="visible" />

    <!--  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="5dp">-->

    <ImageView
        android:id="@+id/lake_image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/post_image"
        android:scaleType="fitXY"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"/>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">-->

    <com.fishbuddy.customfonts.CustomRegularTextView
        android:id="@+id/lakedetails_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/lite_color_text"
        android:text="@string/lakedetails"
        android:textSize="12sp"
        android:layout_marginLeft="10dp"
        android:ellipsize="end"
        android:maxLines="5" />

    <!-- </LinearLayout>
 </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="0.2"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.fishbuddy.customfonts.CustomRegularTextView
                    android:id="@+id/area_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:layout_gravity="center"
                    android:textColor="@color/form_text_color"
                    android:textSize="10dp"/>

                <com.fishbuddy.customfonts.CustomRegularTextView
                    android:id="@+id/like_txt_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/totalarea"
                    android:layout_gravity="center"
                    android:textColor="@color/lite_color_text"
                    android:textSize="10dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/maxdepth_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maxdepth"
                    android:layout_gravity="center"
                    android:textColor="@color/form_text_color"
                    android:textSize="10dp"/>

                <com.fishbuddy.customfonts.CustomRegularTextView
                    android:id="@+id/comments_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/maxdepthft"
                    android:layout_gravity="center"
                    android:textColor="@color/lite_color_text"
                    android:textSize="10dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_count_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/location_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="3dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/directions"
                    android:layout_gravity="center"
                    android:clickable="false"/>

                <com.fishbuddy.customfonts.CustomRegularTextView
                    android:id="@+id/directions_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/orange"
                    android:text="@string/directions"
                    android:textSize="10sp"
                    android:clickable="false"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    <!--</androidx.cardview.widget.CardView>-->
    <!-- </LinearLayout>-->
